#162 - Ipad portrait View - Alignment Issue

--- a/web-app/css/cgrails/default/less/home.less
+++ b/web-app/css/cgrails/default/less/home.less
@@ -275,7 +275,7 @@
 }
 
 /*-- Iphone and tab mid view styles. */
-@media (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 767px) {
 	#login-info {
 		margin: 0 60px;
     	width: 80%;
